--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,5 @@
     "name": "munkireport/sentinelone",
     "description": "Module for munkireport.",
     "license": "MIT",
-    "version": "6.0.0-beta1"
+    "version": "6.0.2"
 }
